[gd_scene load_steps=9 format=3 uid="uid://rnhmi2sdocfw"]

[ext_resource type="ArrayMesh" uid="uid://cm22cv628yuer" path="res://assets/world/dummy.obj" id="1_4ufj7"]
[ext_resource type="Script" path="res://scripts/dummy.gd" id="1_k888t"]
[ext_resource type="AudioStream" uid="uid://cm2en0nsawkm8" path="res://sounds/retro/click.wav" id="3_fck56"]

[sub_resource type="BoxShape3D" id="BoxShape3D_kykv6"]
size = Vector3(1, 2, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_xdb3x"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_qa3ec"]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.0987248, 0), Vector3(0, 0.0987248, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5708, 0), Vector3(4.3432e-08, 1.5708, -1.45766)]
}

[sub_resource type="Animation" id="Animation_nn2nt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.0987248, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5708, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k2mg1"]
_data = {
"RESET": SubResource("Animation_nn2nt"),
"death": SubResource("Animation_qa3ec")
}

[node name="dummy" type="StaticBody3D"]
script = ExtResource("1_k888t")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-2.62268e-08, 0, 0.6, 0, 0.6, 0, -0.6, 0, -2.62268e-08, 0, 0.0987248, 0)
mesh = ExtResource("1_4ufj7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.43893, 0)
shape = SubResource("BoxShape3D_kykv6")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true

[node name="ProgressBar" type="ProgressBar" parent="SubViewport"]
modulate = Color(1, 0, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -25.0
offset_right = 125.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
value = 100.0
show_percentage = false

[node name="healthbar" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.00504, 0)
texture = SubResource("ViewportTexture_xdb3x")

[node name="hitbox" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.43893, 0)
shape = SubResource("BoxShape3D_kykv6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k2mg1")
}

[node name="iFrameTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="resetTimer" type="Timer" parent="."]
one_shot = true

[node name="hitSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.85864, 0)
stream = ExtResource("3_fck56")
volume_db = -5.0
unit_size = 5.0
max_db = -5.0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="iFrameTimer" to="." method="_on_i_frame_timer_timeout"]
[connection signal="timeout" from="resetTimer" to="." method="_on_reset_timer_timeout"]
